Fix multiple issues: * Fix full image caption alignments. * Make button text colour more consistent. * Apply proper variable for seperator color.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -186,17 +186,17 @@
 			}
 
 			&:not(.has-text-color) {
-				color: white;
+				color: $color__background-body;
 			}
 
 			&:hover {
-				color: white;
+				color: $color__background-body;
 				background: $color__background-button-hover;
 				cursor: pointer;
 			}
 
 			&:focus {
-				color: white;
+				color: $color__background-body;
 				background: $color__background-button-hover;
 				outline: thin dotted;
 				outline-offset: -4px;
@@ -225,7 +225,7 @@
 		}
 
 		&.is-style-outline .wp-block-button__link:hover {
-			color: white;
+			color: $color__text-main;
 			border-color: $color__background-button-hover;
 			&:not(.has-background) {
 				color: $color__background-button-hover;
@@ -517,7 +517,7 @@
 
 	//! Image
 	.wp-block-image {
-		max-width: 100%;
+		max-width: 1000%;
 
 		img {
 			display: block;
@@ -674,7 +674,7 @@
 	//! Separator
 	.wp-block-separator,
 	hr {
-		background-color: $color__border;
+		background-color: $color__background-hr;
 		border: 0;
 		height: 2px;
 		margin-bottom: (2 * $size__spacing-unit);
@@ -696,7 +696,7 @@
 			text-align: center;
 
 			&:before {
-				color: $color__text-light;
+				color: $color__background-hr;
 				font-size: $font__size-lg;
 				letter-spacing: $font__size-sm;
 				padding-left: $font__size-sm;
@@ -734,7 +734,7 @@
 			line-height: $font__line-height-heading;
 			text-decoration: none;
 			padding: ($size__spacing-unit * .75) $size__spacing-unit;
-			color: #fff;
+			color: $color__background-body;
 			margin-left: 0;
 			margin-top: calc(0.75 * #{$size__spacing-unit});
 
